# MSc_diploma

./: .editorconfig  README.md
Control/: GenWin.bat
Projects/: CMakeLists.txt
Projects/Engine/: CMakeLists.txt
Projects/Engine/Include/: AnimState.h  AnimationComponent.h  AudioComponent.h  AudioManager.h  AudioProcessor.h  AudioSourceComponent.h  AudioSystem.h  BillboardComponent.h  CameraComponent.h  CameraProcessor.h  Component.h  ComponentCreator.h  Delegate.h  ErrorMessage.h  EventHandler.h  EventID.h  EventManager.h  FiniteStateMachine.h  Game.h  GameObject.h  GameObjectProcessor.h  IState.h  InputHandler.h  InputManager.h  LightComponent.h  LightCreator.h  LightProcessor.h  MeshComponent.h  MeshProcessor.h  NonCopyable.h  ObjectManager.h  ParticleComponent.h  ParticleProcessor.h  PhysicsComponent.h  PhysicsMaterial.h  PhysicsProcessor.h  PhysicsSystem.h  Prefab.h  PrefabBase.h  RenderComponent.h  (+12 more)
Projects/Engine/Include/Prefab/: GameObjectCreator.h  GenericPrefab.h  IPrefab.h
Projects/Engine/Include/XML/: AudioProcessor.h  CameraProcessor.h  EnvironmentDataProcessor.h  GameObjectProcessor.h  LightProcessor.h  MeshProcessor.h  ParticleProcessor.h  PhysicsProcessor.h  PrefabProcessor.h  TPCameraProcessor.h  TagProcessor.h  TransformProcessor.h  XMLParser.h
Projects/Engine/Source/: AnimState.cpp  AnimationComponent.cpp  AudioComponent.cpp  AudioManager.cpp  AudioProcessor.cpp  AudioSourceComponent.cpp  AudioSystem.cpp  BillboardComponent.cpp  CameraComponent.cpp  CameraProcessor.cpp  Component.cpp  ComponentCreator.cpp  ErrorMessage.cpp  EventHandler.cpp  EventManager.cpp  Game.cpp  GameObject.cpp  GameObjectProcessor.cpp  IState.cpp  InputHandler.cpp  InputManager.cpp  LightComponent.cpp  LightCreator.cpp  LightProcessor.cpp  MeshComponent.cpp  MeshProcessor.cpp  ObjectManager.cpp  ParticleComponent.cpp  ParticleProcessor.cpp  PhysicsComponent.cpp  PhysicsMaterial.cpp  PhysicsProcessor.cpp  PhysicsSystem.cpp  PrefabBase.cpp  RenderComponent.cpp  RenderSystem.cpp  Stateable.cpp  TPCameraComponent.cpp  TPCameraProcessor.cpp  TagProcessor.cpp  (+4 more)
Projects/Engine/Source/Prefab/: GameObjectCreator.cpp
Projects/Engine/Source/XML/: AudioProcessor.cpp  CameraProcessor.cpp  EnvironmentDataProcessor.cpp  GameObjectProcessor.cpp  LightProcessor.cpp  MeshProcessor.cpp  ParticleProcessor.cpp  PhysicsProcessor.cpp  PrefabProcessor.cpp  TPCameraProcessor.cpp  TagProcessor.cpp  TransformProcessor.cpp  XMLParser.cpp
Projects/ShooterGame/: CMakeLists.txt
Projects/ShooterGame/GLSL/: Ambient.frag  AmbientMap.frag  DiffusePhong.frag  DiffusePhong.vert  DiffusePhongPerPixel.glsl  DiffusePhongPerVertex.glsl  Lambert.frag  LightMap.frag  PhongBlinn.frag  Transform.vert
Projects/ShooterGame/Include/: BulletComponent.h  CameraControlComponent.h  DynamicMovementComponent.h  DynamicMovementProcessor.h  EnemyAIComponent.h  EnemyAnimationComponent.h  FPSComponent.h  GUIComponent.h  HUDComponent.h  InputComponent.h  InputProcessor.h  ManagerComponent.h  PlayerDataComponent.h  SoldierAnimComponent.h  SoldierAnimationComponent.h  SoldierAudioComponent.h  SoldierComponent.h  SoldierStateComponent.h  WeaponComponent.h
Projects/ShooterGame/Source/: BulletComponent.cpp  CameraControlComponent.cpp  DynamicMovementComponent.cpp  DynamicMovementProcessor.cpp  EnemyAIComponent.cpp  EnemyAnimationComponent.cpp  FPSComponent.cpp  GUIComponent.cpp  HUDComponent.cpp  InputComponent.cpp  InputProcessor.cpp  ManagerComponent.cpp  PlayerDataComponent.cpp  SoldierAnimComponent.cpp  SoldierAnimationComponent.cpp  SoldierComponent.cpp  SoldierStateComponent.cpp  WeaponComponent.cpp  main.cpp
