get_filename_component (TARGET_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
string (REPLACE " " "_" TARGET_NAME ${TARGET_NAME})

include_directories ("Include")
						
FILE (GLOB_RECURSE HEADER_FILES LIST_DIRECTORIES false "Include/*.h")
FILE (GLOB_RECURSE SOURCE_FILES LIST_DIRECTORIES false "Source/*.cpp")

add_library (${TARGET_NAME} SHARED ${SOURCE_FILES} ${HEADER_FILES})

set_target_properties (${TARGET_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/../Bin/${TARGET_NAME}")
set_target_properties (${TARGET_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/../Lib/${TARGET_NAME}")
set_target_properties (${TARGET_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/../Lib/${TARGET_NAME}")
set_target_properties (${TARGET_NAME} PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})

add_custom_command (TARGET ${TARGET_NAME} POST_BUILD
					COMMAND ${CMAKE_COMMAND} -E copy
					"${PROJECT_SOURCE_DIR}/../Bin/${TARGET_NAME}/$(Configuration)/${TARGET_NAME}$<$<CONFIG:Debug>:${CMAKE_DEBUG_POSTFIX}>.${DLIB}"
					"${PROJECT_SOURCE_DIR}/../Bin/ShooterGame/$(Configuration)/${TARGET_NAME}$<$<CONFIG:Debug>:${CMAKE_DEBUG_POSTFIX}>.${DLIB}"
					)

target_link_libraries (${TARGET_NAME} ${LIBS} ${DBLIBS} ${RELLIBS})