# setting the target name same as the current folder
get_filename_component (TARGET_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
string (REPLACE " " "_" TARGET_NAME ${TARGET_NAME})

set (EXTENDED_TARGET_NAME ${TARGET_NAME}${CONFIG_SUFFIX})

include_directories ("Include")
include_directories ("${PROJECT_SOURCE_DIR}/Engine/Include")

FILE (GLOB_RECURSE HEADER_FILES "Include/*.h")
FILE (GLOB_RECURSE SOURCE_FILES "Source/*.cpp")

add_executable (${EXTENDED_TARGET_NAME} ${SOURCE_FILES} ${HEADER_FILES})

set_target_properties (${EXTENDED_TARGET_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/../Bin/${TARGET_NAME}")
set_target_properties (${EXTENDED_TARGET_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/../Lib/${TARGET_NAME}")
set_target_properties (${EXTENDED_TARGET_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/../Lib/${TARGET_NAME}")

target_link_libraries (${EXTENDED_TARGET_NAME} ${LIBRARIES_DEBUG} "${PROJECT_SOURCE_DIR}/../Lib/Engine/Debug/Engine${CONFIG_SUFFIX}.${STATIC_LIB_EXTENSION}")
add_dependencies(${EXTENDED_TARGET_NAME} Engine${CONFIG_SUFFIX})